Issue IMCMS-605 Image editor - Not responsive, IMCMS-673 Improve the view of image editor, IMCMS-676 Small fixes in image editor: - Merge - Remove unnecessary styles - Improve the view

--- a/src/main/webapp/imcms/css/image_editor/imcms-editable-img-controls.css
+++ b/src/main/webapp/imcms/css/image_editor/imcms-editable-img-controls.css
@@ -86,6 +86,7 @@
     align-items: center;
     place-self: center;
 }
-.select-image-button .imcms-button{
+.select-image-button > div{
     margin: 0;
+    min-height: 45px;
 }
