--- a/src/main/webapp/imcms/css/imcms-head.css
+++ b/src/main/webapp/imcms/css/imcms-head.css
@@ -1,22 +1,24 @@
 .imcms-head {
-    background-color: #389ecf;
-    -webkit-box-shadow: 0 0 31px 4px rgba(47, 58, 144, 0.16);
-    -moz-box-shadow: 0 0 31px 4px rgba(47, 58, 144, 0.16);
-    box-shadow: 0 0 31px 4px rgba(47, 58, 144, 0.16);
-    text-align: center;
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 42px;
-    z-index: 20;
+	background-color: #389ecf;
+	-webkit-box-shadow: 0 0 31px 4px rgba(47, 58, 144, 0.16);
+	-moz-box-shadow: 0 0 31px 4px rgba(47, 58, 144, 0.16);
+	box-shadow: 0 0 31px 4px rgba(47, 58, 144, 0.16);
+	text-align: center;
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 42px;
+	z-index: 20;
 }
 
 .imcms-head__logo {
 	background: url(/imcms/images/icon_logo_main.png) no-repeat 0 0;
 	background-size: contain;
 	text-indent: -99999px;
-	margin-left: 20px;
-	margin-top: 4px;
+	display: block;
+	position: absolute;
+	top: 4px;
+	left: 20px;
 	height: 100%;
 	width: 69px;
 }
@@ -33,7 +35,7 @@
 
 .imcms-head__toolbar,
 .imcms-head__button {
-    position: absolute;
-    top: 13px;
-    right: 13px;
+	position: absolute;
+	top: 13px;
+	right: 13px;
 }
